//----------------------------------------------------------------------------
// Copyright 2021, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

#ifndef PYRAMID_MESH_H
#define PYRAMID_MESH_H

void CreatePyramidMesh();

#endif

// --- End of File ---
